Minimal hugo website

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,11 @@
-# This file is a template, and might need editing before it works on your project.
-# Full project: https://gitlab.com/pages/plain-html
+image: monachus/hugo
+
+variables:
+  GIT_SUBMODULE_STRATEGY: recursive
+
 pages:
-  stage: deploy
   script:
-    - mkdir .public
-    - cp -r * .public
-    - mv .public public
+    - hugo
   artifacts:
     paths:
       - public
