--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,30 @@
-image: monachus/hugo
+# This file is a template, and might need editing before it works on your project.
+# Template project: https://gitlab.com/pages/jekyll
+# Docs: https://docs.gitlab.com/ce/pages/
+image: ruby:2.6
 
 variables:
-  GIT_SUBMODULE_STRATEGY: recursive
+  JEKYLL_ENV: production
+  LC_ALL: C.UTF-8
+
+before_script:
+  - gem update bundler --no-document
+  - bundle install --retry 3
+
+test:
+  stage: test
+  script:
+    - bundle exec jekyll build -d test
+  artifacts:
+    paths:
+      - test
+  except:
+    - master
 
 pages:
+  stage: deploy
   script:
-    - hugo
+    - bundle exec jekyll build -d public
   artifacts:
     paths:
       - public
