--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,7 @@ phone: +33 1 57 27 61 87
 author: The AstroDeep team
 # twitter_username: clenemt
 gitlab_username: astrodeep
+github_username: astrodeepnet
 
 # Put your ga tracking code below
 # google_analytics: 'UA-XXXXXXXX-X'
